Version: 1.7.0
Date: 30. 09. 2025
  Features:
    - Added configurable timing for summary notifications (aggregate console alerts) and moved the
      console alert configuration to the map settings tab.
  Changes:
    - Removed "accumulate at max quality" setting to simplify configuration. Now primary entities will
      always earn credits.
  Balancing:
    - Previously, credits were earned as a ratio of secondary entities / primary entities, this could
      lead to a single assembler driving upgrades for the entire factory, which doesn't make sense.
      Now, assemblers earn upgrade credits at a constant rate, which should lead to more predictable
      progress throughout the game.
  Optimizations:
    - Simplified credit distribution system for more consistent secondary entity upgrades
    - Improved batch processing efficiency by calculating credits once per batch instead of per entity
  Modding:
    - Added logging when entity upgrades fail to help diagnose issues
---------------------------------------------------------------------------------------------------
Version: 1.6.2
Date: 29. 09. 2025
  Bugfixes:
    - Improved safety of upgrade code, only proceeding with entities that can be marked for upgrade
  Balancing:
    - Will not downgrade higher quality modules when the module upgrade setting is 'extra-enabled'. So it's safe to
      put higher quality modules in lower quality entities.
---------------------------------------------------------------------------------------------------
Version: 1.6.1
Date: 29. 09. 2025
  Bugfixes:
    - Compatibility fix for the Blueprint Sandboxes mod, entities in a blueprint sandbox will no longer
      attempt to be upgraded, which was causing a crash. Thanks to Smougtea and Vadeblade for reporting!
---------------------------------------------------------------------------------------------------
Version: 1.6.0
Date: 09. 09. 2025
  Optimizations: