@@ -100,11 +100,13 @@ quality-control-inspect-entity=Inspect entity quality metrics
 no-entity-selected=No entity selected. Hover over an entity and then press the shortcut key.
 entity-not-tracked=__1__ is not tracked by Quality Control.
 entity-not-supported=__1__ is not supported by Quality Control
-entity-info-header=__1__ (__2__ quality):
+entity-info-header=__1__ - __2__ quality
 eligible-for-quality-changes=Eligible for quality changes: __1__
-upgrade-attempts=Upgrade attempts: __1__
 credits-earned=Credits earned: __1__
 progress-to-next-attempt=Progress to next attempt: __1__%
 chance-of-success=Chance of success: __1__%
+primary-credits-earned=Credits earned for upgrade attempts: __1__
+secondary-credits-used=Credits used on upgrade attempts so far: __1__
+next-chance-to-change=The next credit provides a __1__% chance of upgrade
 entity-not-tracked-reason=Entity is __1__ and no longer tracked.
 aggregate-notification-header=Quality Control Upgrades:
